# quadratic-stack-blur

./: .gitignore  CMakeLists.txt  README.md  package.json  pnpm-lock.yaml  quadratic-stack-blur.js  stack-blur.js  tsconfig.json  working.js
src/: main.c  stack-blur.c
src/js/: generate-tables.ts  integer-tables.ts  quadratic-stack-blur.ts  stack-blur.test.ts  stack-blur.ts
src/lib/: CMakeLists.txt  quadratic-blur-weights.c  stack-blur.c  stack-blur.h
src/test/: CMakeLists.txt  ctest.c  ctest.h  pgm.c  pgm.h  stack-blur-test.c
